# lv_port_linux_frame_buffer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TransferBuild.sh  sshpi.sh  utils.cmake  version.cmake
.github/: cmake.yml
.github/workflows/: cmake.yml
doc/: Doxyfile
inc/: lv_conf.h
scripts/: PostDebug.sh  TransferBuild.sh
src/: CMakeLists.txt  bar_temperature.c  bar_temperature.h  bar_waterTemp.c  bar_waterTemp.h  copy_release_bins.cmake  crc.h  ecu_configs.h  init_rpi_env.h  init_win_env.cpp  init_win_env.h  lv_conf.h  lv_drv_conf.h  lv_drv_conf_pi.h  lv_drv_conf_rpi.h  lv_drv_conf_sdl.h  lv_drv_conf_win.h  main.c  main_display.c  main_spoofer.c  meter_airPressure.c  meter_airPressure.h  meter_fuelPressure.c  meter_fuelPressure.h  meter_oilPressure.c  meter_oilPressure.h  meter_rpm.c  meter_rpm.h  mouse_cursor_icon.c  sensor.c  sensor.h  serial.c  serial.h
src/widgets/: CMakeLists.txt  arc_timing.c  arc_timing.h  bar_waterTemp.c  bar_waterTemp.h  meter_airPressure.c  meter_airPressure.h  meter_fuelPressure.c  meter_fuelPressure.h  meter_oilPressure.c  meter_oilPressure.h  meter_rpm.c  meter_rpm.h  slider_throttle.c  slider_throttle.h
